--- a/environments/staging/kustomization.yaml
+++ b/environments/staging/kustomization.yaml
@@ -12,3 +12,14 @@ images:
   - name: quay.io/gh-stocky37/greeting-api
     newTag: staging
 
+replacements:
+- source:
+    kind: Route
+    fieldPath: metadata.labels.environment
+  targets:
+  - select:
+      kind: Route
+    fieldPaths: ['spec.host']
+    options:
+      delimiter: '.'
+      index: -1
