--- a/base/app/route.yml
+++ b/base/app/route.yml
@@ -2,13 +2,14 @@ apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
   name: greeting-api
-  annotations:
-    openshift.io/host.generated: 'true'
 spec:
+  host: api.example-app.apps.paas.lab.stocky37.dev
   port:
-    targetPort: http
+    targetPort: 8080
   to:
     kind: Service
-    name: ratings
+    name: greeting-api
     weight: 100
+  tls:
+    termination: edge
   wildcardPolicy: None
