--- a/base/database/service.yml
+++ b/base/database/service.yml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: greeting-api
+  name: greeting-db
 spec:
   type: ClusterIP
   ports:
-  - name: http
-    port: 8080
+  - name: postgresql
+    port: 5432
     protocol: TCP
-    targetPort: 8080
+    targetPort: 5432
   selector:
-    deployment: greeting-api
+    deployment: greeting-db
   sessionAffinity: None
