--- a/base/app/kustomization.yaml
+++ b/base/app/kustomization.yaml
@@ -2,13 +2,14 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 commonAnnotations:
-  app.openshift.io/vcs-uri: https://github.com/stocky37/ex-greeting-api.git
+  app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"greeting-db"}]'
 
 commonLabels:
   app: greeting-api
   app.kubernetes.io/name: greeting-api
   app.kubernetes.io/instance: greeting-api
   app.kubernetes.io/component: backend
+  app.openshift.io/runtime: quarkus
 
 resources:
 - deployment.yml
