--- a/base/kustomization.yaml
+++ b/base/kustomization.yaml
@@ -1,6 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+commonAnnotations:
+  app.openshift.io/vcs-uri: https://github.com/stocky37/ex-greeting-api.git
+
 commonLabels:
   app.kubernetes.io/part-of: example-app
 
