--- a/overlays/stage/kustomization.yml
+++ b/overlays/stage/kustomization.yml
@@ -1,17 +1,16 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: example-app-staging
+namespace: examples-stage
 
 commonLabels:
-  environment: &env staging
+  environment: stage
 
 resources:
 - ../../base
 
 images:
-  - name: quay.io/gh-stocky37/greeting-api
-    newTag: *env
-
+  - digest: sha256:73051e914030a0b6da77b7fc277d57ad0cef7783e3a8a4e82244af0cf3835e14
+    name: quay.io/tstockwell/greeting-api
 
 replacements:
 - source:
