--- a/base/app/kustomization.yml
+++ b/base/app/kustomization.yml
@@ -5,9 +5,9 @@ commonAnnotations:
   app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"greeting-db"}]'
 
 commonLabels:
-  app: greeting-api
-  app.kubernetes.io/name: greeting-api
-  app.kubernetes.io/instance: greeting-api
+  app: &app greeting-api
+  app.kubernetes.io/name: *app
+  app.kubernetes.io/instance: *app
   app.kubernetes.io/component: backend
   app.openshift.io/runtime: quarkus
 
