--- a/base/database/kustomization.yml
+++ b/base/database/kustomization.yml
@@ -2,9 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 commonLabels:
-  app: greeting-db
-  app.kubernetes.io/name: greeting-db
-  app.kubernetes.io/instance: greeting-db
+  app: &app greeting-db
+  app.kubernetes.io/name: *app
+  app.kubernetes.io/instance: *app
   app.kubernetes.io/component: database
   app.openshift.io/runtime: postgresql
 
