--- a/overlays/prod/kustomization.yml
+++ b/overlays/prod/kustomization.yml
@@ -1,12 +1,15 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: examples-prod
+namespace: demo-gitops-cicd-prod
 
 commonLabels:
   environment: prod
 
 resources:
 - ../../base
+
+patches:
+- path: patch-route.yml
 
 images:
 - digest: sha256:e152454cda0d4dad6084a794934c7b1df4fcf8df200cce63a31ced2901b6d4c6
