--- a/overlays/dev/kustomization.yml
+++ b/overlays/dev/kustomization.yml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: examples-dev
+namespace: demo-gitops-cicd-dev
 
 commonLabels:
   environment: dev
@@ -8,18 +8,9 @@ commonLabels:
 resources:
   - ../../base
 
+patches:
+- path: patch-route.yml
+
 images:
   - digest: sha256:73051e914030a0b6da77b7fc277d57ad0cef7783e3a8a4e82244af0cf3835e14
     name: quay.io/tstockwell/greeting-api
-
-replacements:
-  - source:
-      kind: Route
-      fieldPath: metadata.labels.environment
-    targets:
-      - select:
-          kind: Route
-        fieldPaths: ['spec.host']
-        options:
-          delimiter: '.'
-          index: -1
