--- a/overlays/prod/kustomization.yml
+++ b/overlays/prod/kustomization.yml
@@ -1,12 +1,15 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: examples-prod
+namespace: demo-gitops-cicd-prod
 
 commonLabels:
   environment: prod
 
 resources:
 - ../../base
+
+patches:
+- path: patch-route.yml
 
 images:
   - digest: sha256:73051e914030a0b6da77b7fc277d57ad0cef7783e3a8a4e82244af0cf3835e14
