--- a/overlays/dev/kustomization.yml
+++ b/overlays/dev/kustomization.yml
@@ -1,15 +1,12 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: demo-gitops-cicd-dev
 
 commonLabels:
   environment: dev
 
 resources:
-- ../../base
-
-patches:
-- path: patch-route.yml
+- app
+- argocd
 
 images:
 - digest: sha256:e152454cda0d4dad6084a794934c7b1df4fcf8df200cce63a31ced2901b6d4c6
