--- a/overlays/stage/app/kustomization.yml
+++ b/overlays/stage/app/kustomization.yml
@@ -1,12 +1,12 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-
-commonLabels:
-  environment: prod
+namespace: demo-gitops-cicd-stage
 
 resources:
-- app
-- argocd
+- ../../../base
+
+patches:
+- path: patch-route.yml
 
 images:
 - digest: sha256:e152454cda0d4dad6084a794934c7b1df4fcf8df200cce63a31ced2901b6d4c6
